--- a/demo/demo.html
+++ b/demo/demo.html
@@ -9,9 +9,15 @@
 </head>
 <body>
   <div ng-app="demoModule">
+    <div ng-controller="DemoCtrl">
+      <input type="text">
+      <button>Add Event</button>
+    </div>
     
   </div>
 
+  <script src="../bower_components/angular/angular.js"></script>
+  <script src="../bower_components/keen-js/dist/keen.js"></script>
   <script src="../angular-keen-tracker.js"></script>
   <script src="demo-app.js"></script>
 
